Adding unpkg UMD entry point.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "name": "@observablehq/notebook-inspector",
   "version": "0.0.0",
   "main": "src/index",
+  "module": "dist/notebook-inspector.js",
+  "unpkg": "dist/notebook-inspector.umd.js",
   "author": {
     "name": "Observable, Inc."
   },
