--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "private": true,
   "name": "@observablehq/notebook-inspector",
   "version": "1.0.0",
+  "license": "ISC",
   "main": "src/index",
   "module": "dist/notebook-inspector.js",
   "unpkg": "dist/notebook-inspector.umd.js",
   "author": {
     "name": "Observable, Inc."
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/observablehq/notebook-inspector.git"
   },
   "scripts": {
     "precommit": "eslint .",
