--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "@observablehq/notebook-inspector",
+  "name": "@observablehq/inspector",
   "version": "2.0.1",
   "license": "ISC",
-  "main": "dist/notebook-inspector.umd.js",
-  "module": "dist/notebook-inspector.js",
+  "main": "dist/inspector.umd.js",
+  "module": "dist/inspector.js",
   "author": {
     "name": "Observable, Inc.",
     "url": "https://observablehq.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/observablehq/notebook-inspector.git"
+    "url": "https://github.com/observablehq/inspector.git"
   },
   "scripts": {
     "test": "rollup -c && jest",
     "precommit": "eslint .",
     "prepare": "rollup -c",
-    "prepublishOnly": "cleancss -o dist/notebook-inspector-style.css src/style.css",
+    "prepublishOnly": "cleancss -o dist/inspector-style.css src/style.css",
     "postpublish": "git push && git push --tags"
   },
   "esm": {
