--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clean-css-cli": "^4.2.1",
     "eslint": "^5.10.0",
     "husky": "^2.3.0",
+    "immutable": "^4.0.0-rc.12",
     "jest": "^24.8.0",
     "rollup": "^1.12.3",
     "rollup-plugin-node-resolve": "^5.0.0",
