--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@observablehq/inspector",
-  "version": "3.1.0",
+  "version": "3.2.0-rc.1",
   "license": "ISC",
   "main": "dist/inspector.js",
   "module": "src/index.js",
