--- a/package.json
+++ b/package.json
@@ -35,17 +35,15 @@
     "dist/**/*.css",
     "dist/**/*.js"
   ],
-  "dependencies": {
-    "esm": "^3.2.25"
-  },
   "devDependencies": {
     "clean-css-cli": "^4.3.0",
-    "eslint": "^6.7.2",
-    "husky": "^3.1.0",
+    "eslint": "^7.18.0",
+    "esm": "^3.2.25",
+    "husky": "^4.3.8",
     "immutable": "^4.0.0-rc.12",
-    "jest": "^24.9.0",
-    "rollup": "^1.27.8",
+    "jest": "^26.6.3",
+    "rollup": "^2.37.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.2.0"
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
