--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "rollup": "^2.37.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "isoformat": "^0.2.0"
   }
 }
