--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@observablehq/inspector",
-  "version": "3.2.4",
+  "version": "4.0.0-rc.1",
   "author": {
     "name": "Observable, Inc.",
     "url": "https://observablehq.com"
